syntax = "proto3";

package stats.service.dashboard;

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.stats.controller";

import "messages/events_similarity.proto";

service RecommendationsController {
  rpc GetRecommendationsForUser (message.event.UserPredictionsRequestProto)
      returns (stream message.event.RecommendedEventProto);

  rpc GetSimilarEvents (message.event.SimilarEventsRequestProto)
      returns (stream message.event.RecommendedEventProto);

  rpc GetInteractionsCount (message.event.InteractionsCountRequestProto)
      returns (stream message.event.RecommendedEventProto);
}